# nbody

./: Cargo.toml  README.md  build.rs  shader.wgsl
nbody_macros/: Cargo.toml
nbody_macros/src/: lib.rs
src/: main.rs  octree.rs  particle.rs  render.rs
