[package]
name = "nbody"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_env = "0.1.2"
wgpu = "0.8.0"
image = "0.23.14"
snmalloc-rs = "0.2.27"
nbody_macros = {path = "./nbody_macros/"}
parking_lot = "0.11.1"
float-ord = "0.3.1"
tokio = { version = "1.5.0", features = ["full"] }
atomic_float = "0.1.0"

[build-dependencies]
num_cpus = "1.13.0"